--- a/CV.html
+++ b/CV.html
@@ -6,6 +6,26 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <h1>AIYEDATIWA FIDELIS</h1>
+        <p><strong>Address:</strong> Okitipupa, Ondo State</p>
+        <p><strong>Phone:</strong> <a href="tel:+2348157170740">+2348157170740</a></p>
+        <p><strong>Email: </strong> <a href="email:ayo1641@gmail.com">ayo1641@gmail.com</a></p>
+        <p><strong>GitHub:</strong><a href="github.com/Aiyedatiwafidelis"> Aiyedatiwafidelis</a></p>
+    </header>
+    <hr>
+    <main>
+        <section>
+            <h2>PROFESSIONAL SUMMARY</h2>
+                <p>Motivated and self-taught beginner web developer with a strong interest in building rsponsive, user-freindly websites.<br>
+                I enjoy learning mordern web technologies and applying them to create engaging web experiences.<br>
+                I also want to improve my problem solving skills through real projects and collaboration with other developers.<br>
+                Currently focusing on mastering HTML, CSS, and JavaScript to build a solid foundation in web development.<br>
+                </p>
+        </section>
+        <section>
+        <h2
+        </section>
+
 </body>
 </html>
