--- a/CV.html
+++ b/CV.html
@@ -7,25 +7,95 @@
 </head>
 <body>
     <header>
-        <h1>AIYEDATIWA FIDELIS</h1>
-        <p><strong>Address:</strong> Okitipupa, Ondo State</p>
-        <p><strong>Phone:</strong> <a href="tel:+2348157170740">+2348157170740</a></p>
-        <p><strong>Email: </strong> <a href="email:ayo1641@gmail.com">ayo1641@gmail.com</a></p>
-        <p><strong>GitHub:</strong><a href="github.com/Aiyedatiwafidelis"> Aiyedatiwafidelis</a></p>
+        <h1>AIYEDATIWA FIDELIS OLAOTAN</h1>
+        <h2>Beginner Web developer|Medical Laboratory Scientist</h2>
+        <p><strong>📍Address:</strong> Okitipupa, Ondo State</p>
+        <p><strong>📱Phone:</strong> <a href="tel:+2348157170740">+2348157170740</a></p>
+        <p><strong>📧Email: </strong> <a href="email:ayo1641@gmail.com">ayo1641@gmail.com</a></p>
+        <p><strong>🐙GitHub:</strong><a href="github.com/Aiyedatiwafidelis"> Aiyedatiwafidelis</a></p>
     </header>
     <hr>
     <main>
         <section>
-            <h2>PROFESSIONAL SUMMARY</h2>
-                <p>Motivated and self-taught beginner web developer with a strong interest in building rsponsive, user-freindly websites.<br>
-                I enjoy learning mordern web technologies and applying them to create engaging web experiences.<br>
-                I also want to improve my problem solving skills through real projects and collaboration with other developers.<br>
-                Currently focusing on mastering HTML, CSS, and JavaScript to build a solid foundation in web development.<br>
-                </p>
+            <h2>👨‍💻PROFESSIONAL SUMMARY</h2>
+                <p>Motivated Web developer with a strong foundation in HTML, CSS, JavaScript, and responsive design.<br>Passionate about solving problems through code and building practical projects to strengthen my skills.<br>Also a certified <strong>Medical laboratory scientist</strong> with hands-on experience in laboratory diagnostics, quality control, and patient-centered testing.<br>Combining technical and analytical strengths from both fields, I bring attention to detail, accuracy, and a continous learning mindset to every project.</p>
         </section>
+        <hr>
         <section>
-        <h2
+        <h2>🛠️WEB DEVELOPMENT SKILLS</h2>
+        <ul>
+            <li>HTML5</li>
+            <li>CSS3 (flexbox, grid)</li>
+            <li>JavaScript (ES6+)</li>
+            <li>Responsive web design</li>
+        </ul>
+        <h2>TOOLS AND TECHNOLOGIES</h2>
+        <ul>
+            <li>Git amd GitHub</li>
+            <li>VS code</li>
+            <li>Chrome DevTools</li>
+            <li>Basic UI/UX Principles</li>
+        </ul>
         </section>
-
+        <hr>
+        <section>
+            <h2>🧪MEDICAL LABORATORY SCIENCE SKILLS</h2>
+            <ul>
+                <li>Hematology</li>
+                <li>Microbiology</li>
+                <li>Serology</li>
+                <li>Sample collection and processing</li>
+                <li>Laboratory Quality Control</li>
+                <li>Infection Prevention Control</li>
+                <li>Documentation and Reporting</li>
+            </ul>
+        </section>
+        <hr>
+        <section>
+            <h2>📚PROJECTS (Web development)</h2>
+            <ol>
+                <li><strong>Personal Portfolio Website</strong></li>
+                <p>Tech: HTML, CSS, JavaScript</p>
+                <p>A responsive site to showcase my work and contact information</p>
+                <p><a href="https://github.com/Aiyedatiwafidelis/html-CV.git"><em>Link-to-project</em></a></p>
+                <li><strong>Medical Lab info Page</strong></li>
+                <p>Tech: HTML, CSS</p>
+                <p>A mini-site explaining laboratory tests for patient education.</p>
+                <p><em>no link yet</em></p>
+            </ol>
+        </section>
+        <hr>
+        <section>
+            <h2>🎓EDUCATION</h2>
+            <P><strong>Bachelor of Medical Laboratory Science</strong></P>
+            <p>Igbinedion University Okada-<em>2022</em></p>
+            <p><strong>Web Development Courses</strong></p>
+            <ul>
+                <li>FreeCodeCamp-<em>----</em></li>
+                <p>TS Academy-<em>------</em></p>
+            </ul>
+        </section>
+        <hr>
+        <section>
+            <h2>📜CERTIFICATES</h2>
+            <ul>
+                <li>Medical Laboratory Science License</li>
+                <li>FreeCodeCamp Responsive Web Design</li>
+                <li>Infection Prevention Control Certificate</li>
+            </ul>
+        </section>
+        <hr>
+        <section>
+            <h2>🧩SOFT SKILLS</h2>
+            <ul>
+                <li>Analytical Thinking</li>
+                <li>Attention to Detail</li>
+                <li>Problem Solving</li>
+                <li>Teamwork</li>
+                <li>Communication</li>
+                <li>Fast Learner</li>
+            </ul>
+        </section>
+    </main>
 </body>
 </html>
