--- a/CV.html
+++ b/CV.html
@@ -17,7 +17,7 @@
     <hr>
     <main>
         <section>
-            <h2>👨‍💻PROFESSIONAL SUMMARY</h2>
+            <h2>👨‍💻sPROFESSIONAL SUMMARY</h2>
                 <p>Motivated Web developer with a strong foundation in HTML, CSS, JavaScript, and responsive design.<br>Passionate about solving problems through code and building practical projects to strengthen my skills.<br>Also a certified <strong>Medical laboratory scientist</strong> with hands-on experience in laboratory diagnostics, quality control, and patient-centered testing.<br>Combining technical and analytical strengths from both fields, I bring attention to detail, accuracy, and a continous learning mindset to every project.</p>
         </section>
         <hr>
